--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,10 @@ android {
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
         def SDK_TOKEN = properties.getProperty("sdk.token")
+        def SDK_BASE_URL = properties.getProperty("sdk.baseUrl")
+
         buildConfigField("String", "SDK_TOKEN", "\"${SDK_TOKEN}\"")
+        buildConfigField("String", "SDK_BASE_URL", "\"${SDK_BASE_URL}\"")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,7 +50,7 @@ android {
 }
 
 repositories {
-    maven { url 'https://raw.githubusercontent.com/asw-soi/spaccer-sdk-android-test/main/repository'}
+    maven { url 'https://raw.githubusercontent.com/asw-soi/spaccer-sdk-android-test/main/repository' }
 }
 
 dependencies {
@@ -74,6 +77,6 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:2.0.1"
     implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
-    implementation 'com.spacer:sdk:0.0.1'
-//    implementation project(":sdk")
+//    implementation 'com.spacer:sdk:0.0.1'
+    implementation project(":sdk")
 }
