--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.0"
+    compileSdkVersion 34
+    namespace "com.spacer.sdk"
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -24,11 +24,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
@@ -50,15 +50,23 @@ dependencies {
 
 def repo = new File(rootDir, "repository")
 
-apply plugin: "maven"
+apply plugin: "maven-publish"
 
-uploadArchives {
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            afterEvaluate {
+                from components.findByName("release")
+            }
+            groupId = 'com.spacer'
+            artifactId = 'sdk'
+            version = '1.8.0'
+        }
+    }
     repositories {
-        mavenDeployer {
-            repository url: "file://${repo.absolutePath}"
-            pom.version = '1.8.0'
-            pom.groupId = 'com.spacer'
-            pom.artifactId = 'sdk'
+        maven {
+            url = uri("file://${repo.absolutePath}")
         }
     }
 }
+
